add_subdirectory(global)
add_subdirectory(looreflect)
add_subdirectory(modulemanager)
add_subdirectory(plog)
add_subdirectory(filemanager)
add_subdirectory(core)
add_subdirectory(ifvk)
add_subdirectory(vulkanloader)
add_subdirectory(glsl_trace)
add_subdirectory(pipeline_compiler)
#add_subdirectory(rhi)
#add_subdirectory(vulkanrhi)
add_subdirectory(vkfg)
add_subdirectory(audio)
