cmake_minimum_required(VERSION 3.4.1 FATAL_ERROR)

set(ENGINE_ROOT_DIR "res" CACHE PATHS "")
#set(ENGINE_ROOT_DIR "../../../")
file(RELATIVE_PATH ENGINE_ROOT_DIR_TMP E:/git/mine/loo/looengine/buildsys/android ../../../)
message("ENGINE_ROOT_DIR=")
set(NAME %SAMPLE_NAME%)
#add_definitions(-DLOO_BUILD_TESTS)
add_definitions(-DLOO_BUILD_TESTS_testframework)
add_subdirectory(../../../)
